fix gaps

--- a/src/pages/decs/ui/deckHeader/deckHeader.module.scss
+++ b/src/pages/decs/ui/deckHeader/deckHeader.module.scss
@@ -14,7 +14,7 @@
 
 .deckFilterGroup {
   display: flex;
-  gap: 10px;
+  gap: 15px;
   place-content: center space-between;
   place-items: flex-end center;
 }
